--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This project is seriously awesome, you guys.
+This project is totally awesome, you guys.
 
 This project will help students learn about working with Git repositories
